# nn

./: CMakeLists.txt  Makefile  README.md  bookmarks-2018-07-17.json  data.txt
include/: functions.h  layer.h  mnist_reader.h  net.h  tools.h  util.h
include/data/: data_reader.h  mnist_reader.h
include/net/: .layer.h.swp  layer.h  net.h
include/util/: functions.h  util.h
include/utils/: functions.h  util.h
src/: functions.cpp  layer.cpp  main.cpp  mnist_reader.cpp  net.cpp  tools.cpp
src/data/: mnist_reader.cpp
src/net/: layer.cpp  net.cpp
src/util/: functions.cpp
